src/raylib/RayLib3.pas


  { Input-related functions: gamepads }

  // Detect if a key is NOT being pressed
  IsKeyUp: function(key: Integer): Boolean; cdecl;
  // Set a custom key to exit program (default is ESC)
  SetExitKey: procedure(key: Integer); cdecl;
  // Get key pressed, call it multiple times for chars queued
  GetKeyPressed: function: Integer; cdecl;
  // Get char pressed (unicode), call it multiple times for chars queued
  GetCharPressed: function: Integer; cdecl;

  // Input-related functions: gamepads

  // Detect if a gamepad is available
  IsGamepadAvailable: function(gamepad: Integer): Boolean; cdecl;
  // Check gamepad name (if available)
  IsGamepadName: function(gamepad: Integer; const name: PUTF8Char): Boolean; cdecl;
  // Return gamepad internal name id
  GetGamepadName: function(gamepad: Integer): PUTF8Char; cdecl;
  // Detect if a gamepad button has been pressed once
  IsGamepadButtonPressed: function(gamepad: Integer; button: Integer): Boolean; cdecl;
  // Detect if a gamepad button is being pressed
  IsGamepadButtonDown: function(gamepad: Integer; button: Integer): Boolean; cdecl;
  // Detect if a gamepad button has been released once
  IsGamepadButtonReleased: function(gamepad: Integer; button: Integer): Boolean; cdecl;
  // Detect if a gamepad button is NOT being pressed
  IsGamepadButtonUp: function(gamepad: Integer; button: Integer): Boolean; cdecl;
  // Get the last gamepad button pressed
  GetGamepadButtonPressed: function: Integer; cdecl;
  // Return gamepad axis count for a gamepad
  GetGamepadAxisCount: function(gamepad: Integer): Integer; cdecl;
  // Return axis movement value for a gamepad axis
  GetGamepadAxisMovement: function(gamepad: Integer; axis: Integer): Single; cdecl;

  { Input-related functions: mouse }

  // Detect if a mouse button has been pressed once
  IsMouseButtonPressed: function(button: TMouseButton): Boolean; cdecl;
  // Detect if a mouse button is being pressed
  IsMouseButtonDown: function(button: TMouseButton): Boolean; cdecl;
  // Detect if a mouse button has been released once
  IsMouseButtonReleased: function(button: TMouseButton): Boolean; cdecl;
  // Detect if a mouse button is NOT being pressed
  IsMouseButtonUp: function(button: TMouseButton): Boolean; cdecl;
  // Returns mouse position X
  GetMouseX: function: Integer; cdecl;
  // Returns mouse position Y
  GetMouseY: function: Integer; cdecl;
  // Returns mouse position XY
  {$ifdef FPC}
  GetMousePosition: function: TVector2; cdecl;
  {$else}
  GetMousePosition: function: Int64; cdecl; //Stupid Delphi
  {$endif}
  // Set mouse position XY
  SetMousePosition: procedure(x: Integer; y: Integer); cdecl;
  // Set mouse offset
  SetMouseOffset: procedure(offsetX: Integer; offsetY: Integer); cdecl;
  // Set mouse scaling
  SetMouseScale: procedure(scaleX: Single; scaleY: Single); cdecl;
  // Returns mouse wheel movement Y
  GetMouseWheelMove: function: Single; cdecl;
  // Returns mouse cursor if (MouseCursor enum)
  GetMouseCursor: function: Integer; cdecl;
  // Set mouse cursor
  SetMouseCursor: procedure(Cursor: Integer); cdecl;

  { Input-related functions: touch }

  // Returns touch position X for touch point 0 (relative to screen size)
  GetTouchX: function: Integer; cdecl;
  // Returns touch position Y for touch point 0 (relative to screen size)
  GetTouchY: function: Integer; cdecl;
  // Returns touch position XY for a touch point index (relative to screen size)
  GetTouchPosition: function(index: Integer): TVector2; cdecl;

//------------------------------------------------------------------------------------
// Gestures and Touch Handling Functions (Module: gestures)
//------------------------------------------------------------------------------------

  // Enable a set of gestures using flags
  SetGesturesEnabled: procedure(gestureFlags: Cardinal); cdecl;
  // Check if a gesture have been detected
  IsGestureDetected: function(gesture: Integer): Boolean; cdecl;
  // Get latest detected gesture
  GetGestureDetected: function: Integer; cdecl;
  // Get touch points count
  GetTouchPointsCount: function: Integer; cdecl;
  // Get gesture hold time in milliseconds
  GetGestureHoldDuration: function: Single; cdecl;
  // Get gesture drag vector
  GetGestureDragVector: function: TVector2; cdecl;
  // Get gesture drag angle
  GetGestureDragAngle: function: Single; cdecl;
  // Get gesture pinch delta
  GetGesturePinchVector: function: TVector2; cdecl;
  // Get gesture pinch angle
  GetGesturePinchAngle: function: Single; cdecl;

//------------------------------------------------------------------------------------
// Camera System Functions (Module: camera)
//------------------------------------------------------------------------------------

  // Set camera mode (multiple camera modes available)
  SetCameraMode: procedure(camera: TCamera; mode: Integer); cdecl;
  // Update camera position for selected mode
  UpdateCamera: procedure(camera: PCamera); cdecl;

  // Set camera pan key to combine with mouse movement (free camera)
  SetCameraPanControl: procedure(KeyPan: Integer); cdecl;
  // Set camera alt key to combine with mouse movement (free camera)
  SetCameraAltControl: procedure(Keylt: Integer); cdecl;
  // Set camera smooth zoom key to combine with mouse (free camera)
  SetCameraSmoothZoomControl: procedure(keySmoothZoom: Integer); cdecl;
  // Set camera move controls (1st person and 3rd person cameras)
  SetCameraMoveControls: procedure(KeyFront: Integer; KeyBack: Integer; KeyRight: Integer; KeyLeft: Integer; KeyUp: Integer; KeyDown: Integer); cdecl;

//------------------------------------------------------------------------------------
// Basic Shapes Drawing Functions (Module: shapes)
//------------------------------------------------------------------------------------

  { Basic shapes drawing functions }

  // Draw a pixel
  DrawPixel: procedure(posX: Integer; posY: Integer; color: TColor); cdecl;
  // Draw a pixel (Vector version)
  DrawPixelV: procedure(position: TVector2; color: TColor); cdecl;
  // Draw a line
  DrawLine: procedure(startPosX: Integer; startPosY: Integer; endPosX: Integer; endPosY: Integer; color: TColor); cdecl;
  // Draw a line (Vector version)
  DrawLineV: procedure(startPos: TVector2; endPos: TVector2; color: TColor); cdecl;
  // Draw a line defining thickness
  DrawLineEx: procedure(startPos: TVector2; endPos: TVector2; thick: Single; color: TColor); cdecl;
  // Draw a line using cubic-bezier curves in-out
  DrawLineBezier: procedure(startPos: TVector2; endPos: TVector2; thick: Single; color: TColor); cdecl;
  // Draw lines sequence
  DrawLineStrip: procedure(points: PVector2; pointsCount: Integer; color: TColor); cdecl;
  // Draw a color-filled circle
  DrawCircle: procedure(centerX: Integer; centerY: Integer; radius: Single; color: TColor); cdecl;
  // Draw a piece of a circle
  DrawCircleSector: procedure(center: TVector2; radius: Single; startAngle: Integer; endAngle: Integer; segments: Integer; color: TColor); cdecl;
  // Draw circle sector outline
  DrawCircleSectorLines: procedure(center: TVector2; radius: Single; startAngle: Integer; endAngle: Integer; segments: Integer; color: TColor); cdecl;
  // Draw a gradient-filled circle
  DrawCircleGradient: procedure(centerX: Integer; centerY: Integer; radius: Single; color1: TColor; color2: TColor); cdecl;
  // Draw a color-filled circle (Vector version)
  DrawCircleV: procedure(center: TVector2; radius: Single; color: TColor); cdecl;
  // Draw circle outline
  DrawCircleLines: procedure(centerX: Integer; centerY: Integer; radius: Single; color: TColor); cdecl;
  // Draw ellipse
  DrawEllipse: procedure(centerX: Integer; centerY: Integer; radiusH: Single; radiusV: Single; color: TColor); cdecl;
  // Draw ellipse outline
  DrawEllipseLines: procedure(centerX: Integer; centerY: Integer; radiusH: Single; radiusV: Single; color: TColor); cdecl;
  // Draw ring
  DrawRing: procedure(center: TVector2; innerRadius: Single; outerRadius: Single; startAngle: Integer; endAngle: Integer; segments: Integer; color: TColor); cdecl;
  // Draw ring outline
  DrawRingLines: procedure(center: TVector2; innerRadius: Single; outerRadius: Single; startAngle: Integer; endAngle: Integer; segments: Integer; color: TColor); cdecl;
  // Draw a color-filled rectangle
  DrawRectangle: procedure(posX: Integer; posY: Integer; Width: Integer; Height: Integer; Color: TColor); cdecl;
  // Draw a color-filled rectangle (Vector version)
  DrawRectangleV: procedure(position: TVector2; size: TVector2; color: TColor); cdecl;
  // Draw a color-filled rectangle
  DrawRectangleRec: procedure(rec: TRectangle; color: TColor); cdecl;
  // Draw a color-filled rectangle with pro parameters
  DrawRectanglePro: procedure(rec: TRectangle; origin: TVector2; rotation: Single; color: TColor); cdecl;
  // Draw a vertical-gradient-filled rectangle
  DrawRectangleGradientV: procedure(posX: Integer; posY: Integer; width: Integer; height: Integer; color1: TColor; color2: TColor); cdecl;
  // Draw a horizontal-gradient-filled rectangle
  DrawRectangleGradientH: procedure(posX: Integer; posY: Integer; width: Integer; height: Integer; color1: TColor; color2: TColor); cdecl;
  // Draw a gradient-filled rectangle with custom vertex colors
  DrawRectangleGradientEx: procedure(rec: TRectangle; col1: TColor; col2: TColor; col3: TColor; col4: TColor); cdecl;
  // Draw rectangle outline
  DrawRectangleLines: procedure(posX: Integer; posY: Integer; width: Integer; height: Integer; color: TColor); cdecl;
  // Draw rectangle outline with extended parameters
  DrawRectangleLinesEx: procedure(rec: TRectangle; lineThick: Integer; color: TColor); cdecl;
  // Draw rectangle with rounded edges
  DrawRectangleRounded: procedure(rec: TRectangle; roundness: Single; segments: Integer; color: TColor); cdecl;
  // Draw rectangle with rounded edges outline
  DrawRectangleRoundedLines: procedure(rec: TRectangle; roundness: Single; segments: Integer; lineThick: Integer; color: TColor); cdecl;
  // Draw a color-filled triangle (vertex in counter-clockwise order!)
  DrawTriangle: procedure(v1: TVector2; v2: TVector2; v3: TVector2; color: TColor); cdecl;
  // Draw triangle outline (vertex in counter-clockwise order!)
  DrawTriangleLines: procedure(v1: TVector2; v2: TVector2; v3: TVector2; color: TColor); cdecl;
  // Draw a triangle fan defined by points (first vertex is the center)
  DrawTriangleFan: procedure(points: PVector2; numPoints: Integer; color: TColor); cdecl;
  // Draw a triangle strip defined by points
  DrawTriangleStrip: procedure(points: PVector2; pointsCount: Integer; color: TColor); cdecl;
  // Draw a regular polygon (Vector version)
  DrawPoly: procedure(center: TVector2; sides: Integer; radius: Single; rotation: Single; color: TColor); cdecl;
  // Draw a polygon outline of n sides
  DrawPolyLines: procedure(center: TVector2; sides: Integer; radius: Single; rotation: Single; color: TColor); cdecl;

  { Basic shapes collision detection functions }
